Tests/RunCMake/math/MATH-InvalidExpression-stderr.txt
^CMake Error at MATH-InvalidExpression.cmake:1 \(math\):
 *math cannot parse the expression: "INVALID": syntax error, unexpected
 *character, expecting exp_PLUS or exp_MINUS or exp_OPENPARENT or exp_NUMBER
 *\(1\).
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
